# tool-survey-report

./: .coderabbit.yaml  .coverage  .gitignore  AGENTS.md  Gemfile  LICENSE  README.md  _config.dev.yml  _config.yml  biome.json  changelog_content.txt  codex.toml  commit_message.txt  commit_msg.txt  coverage.xml  extracted_script.js  fix_testlink.patch  ghsa_details.txt  index.html  index.md  managed_tools.txt  package-lock.json  package.json  parsed_changelog.txt  plan.md  playwright_script.py  pnpm-lock.yaml  pyproject.toml  release_notes_raw.txt  requirements.txt  syntax_check.js  task-organizing-category-tags.md  task-report-create-or-update.md  template_output.txt  test_check.py  test_perf.js  tmp.txt  verify_copilot.py  verify_elevenlabs.py  verify_fix.js  (+1 more)
.github/: dependabot.yml
_data/: categories.yml
_includes/: .gitkeep  footer.html  header.html  navigation.html  related-tools.html  relationship-data.html  relationship-processor.html  relationship-validator.html
_layouts/: .gitkeep  default.html  home.html  report.html  trending.html
_plugins/: liquid_escaper.rb  list_pipe_escaper.rb
_reports/: 9router.md  Google-Opal.md  Salesforce.md  a2a-protocol.md  a2ui.md  abceed.md  accomplish.md  act.md  actionlint.md  adguard.md  affine.md  affinity.md  agent-governance-toolkit.md  agent-i.md  agent-lightning.md  agent-skills.md  agent-trace.md  agent-zero.md  agentic-star.md  agentic-workflows.md  agents-cli.md  agents-md.md  agentscope.md  ai-driven-software-development-platform.md  aidlc-workflows.md  airregi.md  all-svg-icons.md  allure-report.md  (+481 more)
(+199 files in other folders)
