[project]
name = "tool-survey-report"
version = "0.1.0"
description = "A repository for tool survey reports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright==1.61.0",
    "pytest-playwright>=0.8.0",
    "pyyaml==6.0.3",
]

[project.optional-dependencies]
test = [
    "pytest>=9.1.1",
]

[tool.uv]
exclude-newer = "7 days"

[[tool.uv.index]]
name = "flatt"
url = "https://pypi.flatt.tech/simple/"
default = true
